doc: explain G1GC and ZGC terminology in §5
Added a background paragraph before the GC measurement data explaining
what garbage collection is, why stop-the-world pauses matter for a
real-time dialogue runtime, and a comparison table contrasting G1GC
(JVM default, 10-200 ms pauses) with ZGC (sub-ms pauses, Java 15+).
Readers unfamiliar with JVM internals can now understand §5 and the
deployment tier recommendations in §6 without prior JVM knowledge.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>